[gd_scene load_steps=13 format=2]

[ext_resource path="res://PressStart2P_56.tres" type="DynamicFont" id=1]
[ext_resource path="res://icon and UI/SettingPressed.png" type="Texture" id=2]
[ext_resource path="res://icon and UI/Button_Pressed.png" type="Texture" id=3]
[ext_resource path="res://icon and UI/SettingNormal.png" type="Texture" id=4]
[ext_resource path="res://icon and UI/Button_normal.png" type="Texture" id=5]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://Images/Border.png" type="Texture" id=7]
[ext_resource path="res://Scripts/TitleScreenBounce.gd" type="Script" id=8]
[ext_resource path="res://Scenes/ball.tscn" type="PackedScene" id=9]
[ext_resource path="res://font and sound/PressStart2P-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.50205, 2.50212 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 320.0
margin_bottom = 53.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 92.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 224.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "Pong"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 228.0
margin_bottom = 32.0

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 10 )

[node name="HboxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 320.0
margin_bottom = 97.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HboxContainer2"]
margin_right = 116.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="1P_Play" type="TextureButton" parent="VBoxContainer/HboxContainer2"]
margin_left = 120.0
margin_right = 200.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HboxContainer2/1P_Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1P"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HboxContainer2"]
margin_left = 204.0
margin_right = 320.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="HboxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 320.0
margin_bottom = 130.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HboxContainer3"]
margin_right = 116.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="2P_Play" type="TextureButton" parent="VBoxContainer/HboxContainer3"]
margin_left = 120.0
margin_right = 200.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HboxContainer3/2P_Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "2P"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HboxContainer3"]
margin_left = 204.0
margin_right = 320.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 320.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 44.0
alignment = 2

[node name="Setting" type="TextureButton" parent="VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
visible = false
margin_left = 278.0
margin_right = 310.0
margin_bottom = 39.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="ball" parent="." instance=ExtResource( 9 )]
position = Vector2( 158.449, 78.5565 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Up" type="Area2D" parent="Node2D"]
position = Vector2( 160, 0 )
scale = Vector2( 64, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Up"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Node2D/Up"]
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Down" type="Area2D" parent="Node2D"]
position = Vector2( 160, 180 )
scale = Vector2( 64, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Down"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Node2D/Down"]
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Right" type="Area2D" parent="Node2D"]
position = Vector2( 320, 90 )
scale = Vector2( 1, 37 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Right"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Node2D/Right"]
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Left" type="Area2D" parent="Node2D"]
position = Vector2( 0, 90 )
scale = Vector2( 1, 37 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Left"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Node2D/Left"]
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="VBoxContainer/HboxContainer2/1P_Play" to="." method="_on_1P_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/HboxContainer3/2P_Play" to="." method="_on_2P_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="area_entered" from="Node2D/Up" to="Node2D" method="_on_Up_area_entered"]
[connection signal="area_entered" from="Node2D/Down" to="Node2D" method="_on_Down_area_entered"]
[connection signal="area_entered" from="Node2D/Right" to="Node2D" method="_on_Right_area_entered"]
[connection signal="area_entered" from="Node2D/Left" to="Node2D" method="_on_Left_area_entered"]
